Fix overflow scrolling bug on mobile devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,12 +11,15 @@
 
 body, html{
   font-family: 'Inter', sans-serif;
-  margin: 0;
-  overflow-x: hidden;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 @import 'header';
